<resources>
    <string name="app_name">Chawki\'s Android Labs</string>
    <string name="Hello_message">Hello world!</string>
    <string name="button_message">I\'m a button</string>
    <string name="editmessage"> I\'m a text editor </string>
    <string name="hinttext"> Write something here </string>
    <string name="checkbox_message">I\'m a checkbox</string>
    <string name="switch_message">Do you drink coffee?</string>
    <string name="radio_message">Do you drink coffee?</string>

</resources>