<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello_message" />

    <EditText
        android:id="@+id/myedittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hinttext"
        android:minHeight="48dp" />
    <Button
        android:id="@+id/mybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/button_message" />
    <CheckBox
        android:id="@+id/mycheckbox"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/checkbox_message"/>
    <Switch
        android:id="@+id/myswitch"
        android:layout_height="48dp"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/switch_message"/>
    <RadioButton
        android:id="@+id/myradio"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/radio_message"/>
    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/logo_algonquin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />



</LinearLayout>